cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: cloud
